donate today section completed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
         </div>
     </header>
 
-    <main></main>
+    <main class="main">
+        <section class="donate-today">
+            <h2 class="title big-color">Donate Today</h2>
+            <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="amount-container">
+                <button class="amount small-color" type="button">100tk</button>
+                <button class="amount small-color" type="button">200tk</button>
+                <button class="amount small-color" type="button">500tk</button>
+                <button class="amount small-color" type="button">1000tk</button>
+                <button class="amount small-color" type="button">5000tk</button>
+            </div>
+            <form class="domate-form">
+                <input class="donate-box" type="number" placeholder="Other Amount(tk)">
+                <br>
+                <input type="submit" value="Donate Now">
+            </form>
+        <section/>
+    </main>
 
     <footer></footer>
 </body>
