donate today section completed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <br>
                 <input type="submit" value="Donate Now">
             </form>
-        <section/>
+        </section>
     </main>
 
     <footer></footer>
