donation plan section completed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
                 <input type="submit" value="Donate Now">
             </form>
         </section>
+
+        <section class="donate-plan">
+            <h1 class="title big-color">Our Donate Plan</h1>
+            <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="plan-container">
+                <div class="plan plan-food">
+                    <img src="./assets/icons/food.png" alt="Food logo">
+                    <h4 class="plan-title big-color">Food for a family</h4>
+                    <p class="plan-description small-color">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="plan plan-shelter">
+                    <img src="./assets/icons/shelter.png" alt="Family logo">
+                    <h4 class="plan-title big-color">Shelter for a family</h4>
+                    <p class="plan-description small-color">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="plan plan-edu">
+                    <img src="./assets/icons/Frame-1.png" alt="Education logo">
+                    <h4 class="plan-title big-color">Education for a child</h4>
+                    <p class="plan-description small-color">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
