how to contribute section completed

--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
                 </div>
             </div>
         </section>
+
+        <section class="contribute">
+            <div class="column">
+                <div class="column-item-left">
+                    <h1 class="title big-color">Their lives depend on your donation</h1>
+                    <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <a href="#">How to Contribute?</a>
+                </div>
+                <div class="img-right"></div>
+            </div>
+        </section>
+        
+        <section class="contribute">
+            <div class="column">
+                <div class="img-left"></div>
+                <div class="column-item-right">
+                    <h1 class="title big-color">They need us to suvive</h1>
+                    <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <a href="#">How to Contribute?</a>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 
     <footer></footer>
