newsletter section completed

--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             </div>
         </section>
 
-        
+        <section class="newsletter">
+            <h1 class="title big-color">Get My Updates</h1>
+            <p class="description small-color">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <form action="">
+                <input type="text" placeholder="Email"><input type="submit" placeholder="Subscribe">
+            </form>
+        </section>
     </main>
 
     <footer></footer>
